tests/ui/ast_lowering/rustc_res/dyn_trait_does_not_allow_use_precise_capturing_bound.rs
//@ build: fail
//@ stderr

#![allow(unused)]

trait DynTrait<'a, 'b, 'c> {}

fn dyn_existential<'a, 'b, 'c, 'x, 'y>() -> Option<Box<dyn DynTrait<'a, 'b, 'c> + 'x + use<'y>>> {
    None
}
